--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@
       <div class="row">
         <div class="col-sm-12">
 
-  <!-- Form -->        
-          <form class="">
+  <!-- Form -->
+          <form class="toDoList">
             <div class="form-group">
-              <label for="">Lorem Ipsum Baby!:</label>
-              <input class="hotPuddin" type="text" name="name" value="">
+              <label for="">Task:</label>
+              <input class="task" type="text" name="name" value="">
             </div>
 
-            <div class="form-group">
-              <label for="">Lorem Ipsum Baby!:</label>
-              <input class="hotPuddin" type="text" name="name" value="">
-            </div>
 
             <button class="btn btn-info" type="submit" name="button">Gimme some sugar baby</button>
           </form>
@@ -40,7 +36,26 @@
         </div>  <!-- /col-sm-12 -->
       </div>  <!-- /Row -->
 
+  <!-- RESULTS -->
+
+      <div class="row ">
+        <div class="col-sm-12 Results">
+            <ul id="tasks"></ul>
+        </div>
+      </div>
+
     </div>  <!-- /Container -->
+
+
+
+
+
+
+
+
+
+
+
 
   </body>
 </html>
