--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
 
-            <button class="btn btn-info" type="submit" name="button">Gimme some sugar baby</button>
+            <button class="btn btn-info" type="submit" name="button">Add Task</button>
           </form>
 
         </div>  <!-- /col-sm-12 -->
